--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,9 @@ a {
 .header-item {
   position: relative;
 }
+.header-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-text-color);
@@ -122,7 +125,7 @@ a {
 .header-list .header-link.current {
   color: var(--accent-text-color);
 }
-.header-link::after {
+.header-link.current::after {
   display: block;
   content: "";
   width: 100%;
@@ -130,11 +133,10 @@ a {
   background: var(--accent-text-color);
   border-radius: 2px;
   margin-top: 28px;
-  opacity: 0;
+
   position: absolute;
 }
 .header-link:hover::after {
-  opacity: 1;
 }
 
 .header-link-contact {
@@ -145,6 +147,7 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link-contact:hover,
 .header-link-contact:focus {
@@ -258,16 +261,12 @@ a {
 .product-item {
   position: relative;
 }
-.product-item::before {
-  display: inline-block;
-  position: absolute;
-  contain: "";
-  width: 100%;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-}
 
 .product-text {
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  height: 70px;
   position: absolute;
   font-weight: bold;
   font-size: 14px;
@@ -276,7 +275,10 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #fff;
-  bottom: 27px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /*-------------TEAM------------*/
@@ -307,6 +309,7 @@ a {
 .team-name-content {
   padding-top: 30px;
   padding-bottom: 30px;
+  background-color: #ffffff;
 }
 
 .team-name {
@@ -341,9 +344,11 @@ a {
   justify-content: center;
   width: 44px;
   height: 44px;
-
+  background-color: #ffffff;
   border-radius: 50px;
   color: #afb1b8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link:hover,
 .team-social-link:focus {
@@ -352,6 +357,7 @@ a {
 }
 .icon-social {
   fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social:hover,
 .icon-social:focus {
@@ -387,6 +393,8 @@ a {
   box-sizing: border-box;
   border-radius: 4px;
   color: #afb1b8;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
@@ -395,6 +403,7 @@ a {
 }
 .icon-client {
   fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-client:hover,
 .icon-client:focus {
@@ -435,6 +444,7 @@ a {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
@@ -445,6 +455,7 @@ a {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link-contact:hover,
 .address-link-contact:focus {
@@ -478,6 +489,7 @@ a {
   border-radius: 50px;
   color: #fff;
   background: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
@@ -486,6 +498,7 @@ a {
 }
 .icon-social {
   fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social:hover,
 .icon-social:focus {
@@ -545,6 +558,7 @@ a {
   cursor: pointer;
   color: var(--first-btn-color);
   padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-btn:hover,
 .filter-btn:focus {
@@ -586,9 +600,77 @@ a {
 }
 .portfolio-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+/* --------Overley-------- */
+
+.portfolio-item:hover .overley-text,
+.portfolio-item:focus .overley-text {
+  transform: translateY(0);
+}
+.portfolio-overley {
+  position: relative;
+  overflow: hidden;
+}
+.overley-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+  height: 100%;
+  padding: 43px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* --------Modal-------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 450ms, visibility 450ms;
+}
+.backdrop.is-hidden .modal {
+  transform: rotate(-300deg) scale(0.5);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) rotate(0) scale(1);
+  transition: transform 450ms;
+}
+.close-button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 8px;
+  right: 18px;
+  background-color: transparent;
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
