--- a/css/styles.css
+++ b/css/styles.css
@@ -355,14 +355,7 @@ a {
   color: #ffffff;
   background-color: var(--accent-text-color);
 }
-.icon-social {
-  fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-social:hover,
-.icon-social:focus {
-  fill: var(--social-hover-color);
-}
+
 /* ------------CLIENT------------ */
 
 .client {
@@ -394,7 +387,8 @@ a {
   border-radius: 4px;
   color: #afb1b8;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
@@ -558,7 +552,8 @@ a {
   cursor: pointer;
   color: var(--first-btn-color);
   padding: 6px 22px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-btn:hover,
 .filter-btn:focus {
@@ -610,8 +605,7 @@ a {
 
 /* --------Overley-------- */
 
-.portfolio-item:hover .overley-text,
-.portfolio-item:focus .overley-text {
+.portfolio-link:hover .overley-text {
   transform: translateY(0);
 }
 .portfolio-overley {
@@ -630,7 +624,7 @@ a {
   height: 100%;
   padding: 43px 24px;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
