--- a/css/styles.css
+++ b/css/styles.css
@@ -397,11 +397,6 @@ a {
 }
 .icon-client {
   fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-client:hover,
-.icon-client:focus {
-  fill: var(--accent-text-color);
 }
 
 /*-------------FOOTER------------*/
@@ -492,11 +487,6 @@ a {
 }
 .icon-social {
   fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-social:hover,
-.icon-social:focus {
-  fill: var(--social-hover-color);
 }
 .footer-subscribe {
   margin-left: 93px;
@@ -553,7 +543,8 @@ a {
   color: var(--first-btn-color);
   padding: 6px 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-btn:hover,
 .filter-btn:focus {
